Fix body overflow when cart open

--- a/shopping/src/components/stylesheets/Cart.css
+++ b/shopping/src/components/stylesheets/Cart.css
@@ -42,6 +42,10 @@
     display: none;
 }
 
+.overflow-hidden {
+    overflow: hidden;
+}
+
 body {
     /*overflow: hidden;*/
 }
