--- a/shopping/src/components/stylesheets/ProductInfo.css
+++ b/shopping/src/components/stylesheets/ProductInfo.css
@@ -1,3 +1,7 @@
+.product-info-page {
+    width: 100%;
+}
+
 .go-back {
     font-size: 1.7rem;
     width: fit-content;
